--- a/src/main/resources/Layouts/Webview.fxml
+++ b/src/main/resources/Layouts/Webview.fxml
@@ -6,46 +6,43 @@
 <?import javafx.scene.text.*?>
 <?import javafx.scene.web.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.SpotifyWebAPI.Run_Modes.GraphicalInterface.Views.WebviewController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.SpotifyWebAPI.Run_Modes.GraphicalInterface.Views.WebviewController">
     <top>
         <GridPane prefHeight="33.0" prefWidth="600.0" BorderPane.alignment="CENTER">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <TextField fx:id="pageSearchField" onAction="#OnPageSearchButton" promptText="Search"
-                           GridPane.columnIndex="1">
+                <TextField fx:id="pageSearchField" onAction="#OnPageSearchButton" promptText="Search" GridPane.columnIndex="1">
                     <font>
-                        <Font size="11.0"/>
+                        <Font size="11.0" />
                     </font>
                 </TextField>
                 <Button mnemonicParsing="false" onAction="#OnPageSearchButton" text="Search" GridPane.columnIndex="2">
                     <font>
-                        <Font size="11.0"/>
+                        <Font size="11.0" />
                     </font>
                     <GridPane.margin>
-                        <Insets left="5.0"/>
+                        <Insets left="5.0" />
                     </GridPane.margin>
                 </Button>
                 <Button mnemonicParsing="false" onAction="#HandleButtonPress" text="Back">
                     <font>
-                        <Font size="11.0"/>
+                        <Font size="11.0" />
                     </font>
                     <GridPane.margin>
-                        <Insets left="15.0"/>
+                        <Insets left="15.0" />
                     </GridPane.margin>
                 </Button>
             </children>
         </GridPane>
     </top>
     <center>
-        <WebView fx:id="webviewBox" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER"/>
+        <WebView fx:id="webviewBox" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
     </center>
 </BorderPane>
